authentication and authorization config

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,9 @@
 spring.profiles.active=test
 
 spring.jpa.open-in-view=false
+
+jwt.secret= ${JWT_SECRET:MY_JWT_SECRET}
+jwt.duration= ${JWT_DURATION:86400}
+
+security.oauth2.client.client-id= ${CLIENT_ID:clientId}
+security.oauth2.client.client-secret= ${CLIENT_SECRET:clientSecret}
